# CodeRed-Generator

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Changelog.hpp  CodeRedGenerator.sln  CodeRedGenerator.vcxproj  CodeRedGenerator.vcxproj.filters  LICENSE  Member.cpp  Member.hpp  Printer.cpp  Printer.hpp  README.md  dllmain.cpp  dllmain.hpp  pch.hpp  version.hpp.in
Engine/: Engine.cpp  Engine.hpp
Engine/Dishonered/: Configuration.cpp  Configuration.hpp  GameDefines.cpp  GameDefines.hpp  PiecesOfCode.cpp
Engine/Template/: Configuration.cpp  Configuration.hpp  GameDefines.cpp  GameDefines.hpp  PiecesOfCode.cpp  PiecesOfCode.hpp
Framework/: Member.cpp  Member.hpp  Printer.cpp  Printer.hpp
engine/Dishonered/: Configuration.cpp  Configuration.hpp
engine/Dishonored/: Configuration.cpp  GameDefines.hpp  PiecesOfCode.cpp  PiecesOfCode.hpp
engine/Template/: Configuration.cpp  GameDefines.hpp  PiecesOfCode.cpp
include/: Engine.hpp  dllmain.hpp  utils.hpp
include/Framework/: Member.hpp  Printer.hpp
src/: Engine.cpp  dllmain.cpp  utils.cpp
src/Framework/: Member.cpp  Printer.cpp
